--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@vercel/analytics": "^1.2.2",
     "framer-motion": "^10.17.4",
     "next": "^14.0.4",
     "nodemailer": "^6.9.9",
